hphp/hack/test/typecheck/coeffects/closures_subtyping_implicit.bad.php.exp
File "closures_subtyping_implicit.bad.php", line 4, characters 10-32:
Invalid return type (Typing[4403])
  File "closures_subtyping_implicit.bad.php", line 3, characters 62-63:
  Expected a function that requires the capability set {Rx, WriteProperty}
  File "closures_subtyping_implicit.bad.php", line 3, characters 39-46:
  But got a function that requires the capability set {RxLocal, WriteProperty}
File "closures_subtyping_implicit.bad.php", line 8, characters 10-35:
Invalid return type (Typing[4403])
  File "closures_subtyping_implicit.bad.php", line 7, characters 62-63:
  Expected a function that requires the capability set {}
  File "closures_subtyping_implicit.bad.php", line 7, characters 37-47:
  But got a function that requires the capability WriteProperty
File "closures_subtyping_implicit.bad.php", line 13, characters 12-34:
Invalid return type (Typing[4403])
  File "closures_subtyping_implicit.bad.php", line 12, characters 69-70:
  Expected a function that requires the capability set {Rx, WriteProperty}
  File "closures_subtyping_implicit.bad.php", line 12, characters 46-53:
  But got a function that requires the capability set {RxLocal, WriteProperty}
File "closures_subtyping_implicit.bad.php", line 17, characters 12-37:
Invalid return type (Typing[4403])
  File "closures_subtyping_implicit.bad.php", line 16, characters 69-70:
  Expected a function that requires the capability set {}
  File "closures_subtyping_implicit.bad.php", line 16, characters 44-54:
  But got a function that requires the capability WriteProperty
File "closures_subtyping_implicit.bad.php", line 25, characters 22-23:
Invalid argument (Typing[4403])
  File "closures_subtyping_implicit.bad.php", line 21, characters 41-42:
  Expected a function that requires the capability set {Rx, WriteProperty}
  File "closures_subtyping_implicit.bad.php", line 23, characters 42-49:
  But got a function that requires the capability set {RxLocal, WriteProperty}
